# laba-os-3

./: CMakeLists.txt
Unit_tests/: Unit_tests.cpp
cpp1998/: CMakeLists.txt  cpp1998.cpp  cpp1998.h
cpp1998/src/: marker_logic.cpp  marker_thread.cpp  marker_thread.h
cpp2017/: CMakeLists.txt  cpp2017.cpp
cpp2017/src/: marker_logic.cpp  marker_logic.h  marker_thread.cpp  marker_thread.h
